--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vee-validate": "^4.5.8",
     "@vee-validate/rules": "^4.1.17",
-    "vue": "^3.2.13",
     "autoprefixer": "^9",
+    "core-js": "^3.8.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "firebase": "^8.10.1",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "vee-validate": "^4.5.8",
+    "vue": "^3.2.13",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
