--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "firebase": "^8.10.1",
+    "howler": "^2.2.3",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vee-validate": "^4.5.8",
