--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^8.10.1",
     "howler": "^2.2.3",
     "postcss": "^7",
+    "register-service-worker": "^1.7.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.13",
@@ -31,6 +32,7 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "vue-cli-plugin-i18n": "~2.3.1"
   },
