--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.13",
-    "vue-audio-tapir": "^1.3.0",
+    "vue-audio-recorder": "^3.0.1",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
